--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#D4D4D4</color>
     <color name="green">#45B97C</color>
-
+    <color name="lightGreen">#00FF00</color>
 </resources>
