添加了搜索推荐列表，添加了结果搜索失败界面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="✖"
+       android:text="×"
        android:textSize="25sp"
-       android:layout_marginLeft="30dp"
+       android:layout_marginLeft="15dp"
        android:id="@+id/back"
        />
    <TextView
@@ -19,13 +19,13 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选择城市"
-       android:layout_marginLeft="30dp"
+       android:layout_marginLeft="15dp"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/city_list"
-       android:layout_margin="20dp"
+       android:layout_margin="15dp"
        ></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
