--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,27 +15,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             >
             <TextView
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="✖"
+                android:text="×"
                 android:textSize="25sp" />
-
+            <EditText
+                android:id="@+id/search_content"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="搜索你感兴趣的场地"
+                android:background="@null"
+                android:paddingLeft="10dp"
+                android:textSize="25sp"
+                />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-    <EditText
-        android:id="@+id/search_content"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="搜索你感兴趣的场地"
-        android:background="@null"
-        android:paddingLeft="10dp"
-        android:textSize="25sp"
-        />
+
     <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/search_list"
