--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -5,13 +5,13 @@
 
     <Button
         android:id="@+id/city_tv"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+
+        android:layout_height="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/city_tv_back"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:text="北京" />
 </LinearLayout>
