--- a/app/src/main/res/layout/activity_searchresult.xml
+++ b/app/src/main/res/layout/activity_searchresult.xml
@@ -54,27 +54,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="未能搜索到"
+            android:text=""
             android:textSize="20sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="“潜水”"
+            android:text="未能搜索到“潜水”相关的课程或体验，请尝试搜索其它运动。"
             android:id="@+id/updata_tv"
             android:textSize="20sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="相关的课程或体验，"
+            android:text=""
             android:textSize="20sp"
             />
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="请尝试搜索其它运动。"
+        android:text=""
         android:layout_marginLeft="20dp"
         android:textSize="20sp"
         />
